fix slight left-padding on mobile

--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -502,6 +502,7 @@ noscript {
     }
 
     .latest-links-wrapper ul li {
+        margin-left: 0;
         text-align: center;
 
         a {
